<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">安宜投</string>
    <string name="home">首页</string>
    <string name="tab_my">我的</string>
    <string name="tab_invest">投资</string>
    <string name="tab_account_setting">账户设置</string>
    <string name="tab_about_us">关于我们</string>
    <string name="tab_more">更多</string>
    <string name="tab_share">分享</string>
    <string name="setting">设置</string>
    <string name="my_info">我的资产</string>
    <string name="back">返回</string>
    <string name="gestureLock_pwd">管理手势密码</string>
    <string name="forget_pwd">忘记密码</string>
    <string name="forget_gesture_pwd">忘记手势密码?</string>
    <string name="restart_gesture_pwd">重新绘制</string>
    <string name="login_other">登录其他帐号</string>
	<string name="NETWORK_ERROR">网络不给力呀，稍后试试吧！</string>
	<string name="splash_bottom">Copyright @ 2014-2015 18link. All Rights Reserved</string>
	<string name="call_custom">400-910-6868</string>
	<string name="invest_money">投资赚钱</string>
	<string name="msg_load_ing">加载中...</string>
	<string name="login_remind">用户名必须是6-25位的英文、数字、特殊字符@._-组合</string>
	<string name="login_remind2">请输入有效的手机号码</string>
	<string name="password_remind">密码必须是6-20个字符长度</string>
	<string name="registered_kaitong">开通第三方资金托管账户</string>
	<string name="registered_baozhang">保障资金安全</string>
	<string name="un_register">暂不开通</string>
	<string name="registered_shuoming">\t安宜投平台由权威的第三方支付平台对资金进行托管、结算和监督，严格切断资金和业务的联系，平台不享有在三方账户中资金的支配权，充分保障各方的资金安全。</string>
	<string name="invest_description">项目描述</string>
	<string name="invest_risk_control">风险控制</string>
	<string name="invest_repayment_plan">还款计划</string>
	<string name="invest_list">投资列表</string>
	<string name="to_cash">提现</string>
	<string name="to_rechange">充值</string>
	<string name="to_rechange_prompt">1、投资人充值过程全程免费，不收取任何手续费；\n2、最低充值金额应大于等于 1 元；\n3、请投资人根据发标计划合理充值,因1818平台无法触及用户资金账户,无法收取用户任何费用,为防止套现,所充资金必须经投标回款后才能提现；\n4、充值/提现必须为银行借记卡,不支持存折、信用卡充值；\n5、严禁利用充值功能进行信用卡套现、转账、洗钱等行为，一经发现，将封停账号30天；</string>
	<string name="payment_plan">回款计划</string>
	<string name="my_invest">我的投资</string>
	<string name="my_trade_records">交易记录</string>
	<string name="my_card">我的银行卡</string>
	<string name="to_cash_tip" formatted="false">1、身份认证、账户托管开通、提现银行卡均设置成功后，才能进行提现操作；\n2、提现必须为银行借记卡，不支持存折、信用卡提现；\n3、资金到达用户1818平台账户的当日（包括双休日法定节假日）即可发起提现申请；\n4、因1818平台无法触及用户资金账户，无法收取用户任何费用，为防止套现，所充资金必须经投标回款后才能提现。\n5、默认即时取现，对取现总额需要收取0.05%的即时取现费用。如果取现第二天是法定假日或者周末，收取总额的0.05%*提前天数。</string>
	
	<string name="error_phone">手机号码格式错误</string>
	<string name="error_pwd">密码长度须是6~20字符</string>
	<string name="error_pwd_again">两次密码输入不一致</string>
	<string name="input_correct_code">请输入正确的验证码</string>
	<string name="overdue_code">验证码已过期</string>
	<string name="registed_phone">手机号已注册</string>
	<string name="input_phone">请输入手机号</string>
	<string name="input_correct_phone">请输入当前的手机号</string>
	<string name="input_pwd">请输入密码</string>
	<string name="input_correct_pwd">请输入确认密码</string>
	<string name="input_code">请输入验证码</string>
	<string name="send_msg">请先获取验证码</string>
	<string name="input_old_pwd">请输入原密码</string>
	<string name="input_new_pwd">请输入新密码</string>
	<string name="anyitou_introduce">安宜投介绍</string>
	<string name="anyitou_introduce_content">安宜投(www.anyitou.com)隶属于普惠安宜科技(北京)有限公司,团队由金融、风险、法律及互联网科技人才组成,共同打造一个为普通民众及中小微企业提供专业投融资服务的平台。</string>
	<string name="input_suggestion">亲，说两句吧！</string>
	<string name="suggestion_title">您的意见或建议：</string>
	<string name="contact_title">您的联系方式：</string>
	<string name="input_email">方便的话留个邮箱吧！</string>
	<string name="project_list">项目列表</string>
	<string name="my_coupon">优惠券</string>
	<string name="credito_transfer">债权转让</string>
	<string name="coupon_unuse">未使用</string>
	<string name="coupon_used">已使用</string>
	<string name="coupon_outdate">已过期</string>
	
	<string name="member_privilege_tip">1、消费1元送0.15积分；\n2、免充值手续费；\n3、免提现手续费(两月一次发一次提现券,所有提现券一个月过期)；\n4、奖励188(投三万)元投资券(不能取现)；\n5、身份铭牌:用户名左侧显示星级会员图标 . 生日当天投标享额外双倍几分(2 * 1.5)</string>
	
	<string name="agreement">\n\t安宜投网站（以下称本网站）系由普惠安宜科技（北京）有限公司（以下称本公司）负责运营。在您注册成为本网站用户前请务必仔细阅读以下条款。只有在您同意接受本网站的服务并受以下条款的约束的情况下，您才能注册成为本网站用户。若您不接受本网站服务及以下条款，请您停止注册。\n
\t本使用协议内容包括以下条款及已经发布的或将来可能发布的各类规则。所有规则为协议不可分割的一部分，与协议正文具有同等法律效力。本协议是由您与本网站共同签订的，适用于您在本网站的全部活动。在您注册成为用户时，您已经阅读、理解并接受本协议的全部条款及各类规则，并承诺遵守中华人民共和国现行的法律、法规、规章及其他政府规定，如有违反而导致任何法律后果的发生，您将以自己的名义独立承担所有相应的法律责任。\n
\t本网站有权根据需要不时地制定、修改本协议或各类规则，如本协议及规则有任何变更，一切变更以本网站最新公布条例为准。经修订的协议、规则一经在本网站公布，即自动生效或在该等协议、规则指定的时间生效。您应不时地注意本协议及附属规则地变更，若您不同意相关变更，本网站有权不经任何告知终止、中止本协议或者限制您进入本网站的全部或者部分板块且不承担任何法律责任。但该终止、中止或限制行为并不能豁免您在本网站已经进行的交易下所应承担的义务。\n\n
一、本网站服务\n
\t本网站为本网站用户提供【信用咨询、评估、管理，促成本网站用户之间达成融资交易的居间服务，还款管理等服务】。\n
\t声明：本网站用户通过本网站居间服务与本网站其他用户达成的所有交易项下资金的存放和移转均通过银行或第三方支付平台机构实现，本网站不存放交易资金，也不占用交易资金。\n\n
二、注册用户资格限制\n
\t您如果要注册成为本网站用户，必须满足如下条件：具有中华人民共和国（以下简称"中国"）国籍（不包括中国香港、澳门及台湾地区）、年龄在18周岁以上、具有完全民事行为能力的自然人。若不具备前述条件，请您立即终止注册使用本网站服务，否则本网站保留随时中止或终止您用户资格的权利。在此，您向本网站保证，您已符合上述年龄和国籍条件，如因您向本网站提供虚假信息或承诺而导致本网站或本公司蒙受任何损失，您将承担全部责任并赔偿相关损失，且本公司保留追究您或您的监护人相关法律责任的权利。\n
\t您在注册使用本网站服务时，应当根据本网站的要求提供自己的真实信息（包括但不限于真实姓名、联系电话、地址、电子邮箱等信息），并保证向本网站提供的各种信息和资料是真实、准确、完整、有效和合法的，复印件与原件一致。如您向本网站提供的各项信息或资料发生变更，您应当及时向本网站更新用户的信息和资料；如因您未及时更新信息和资料导致本网站无法向您或其他用户提供服务或发生错误，由此产生的法律责任和后果由您自己承担；如您使用他人信息或文件注册使用本网站服务或向本网站提供的信息和资料不符合上述规定，由此引起的一切责任和后果均由您本人全部承担，本公司及本网站不承担因此而产生的任何法律责任；但如因此而给本公司及本网站造成损失，您应当承担赔偿本公司及本网站损失的责任。\n
\t您注册成功后，您承诺不将本网站的用户名许可或转让给第三方使用。您确认，您用您的用户名和密码登陆本网站后在本网站的一切行为均代表您本人作出的行为并由您承担相应的法律后果。任何利用您的用户名以及密码登陆本网站并从事交易等行为均将被视为您的行为。因此，请您非常谨慎的保管自己的用户名及密码。本网站对您的用户名和密码的遗失或被盗取所产生的后果不承担任何责任。\n\n
三、个人信息使用限制\n
\t本网站承诺对于您提供的、自行收集到的、经认证的个人信息将按照本网站的隐私条款予以保护、使用或者披露。\n\n

四、网站使用限制\n
\t本网站所涉及全部内容，包括但不限于文本、数据、文章、设计、源代码、软件、图片、照片及其他全部信息（以下称"网站内容"）的著作权及其他知识产权均属于本网站所有，受中华人民共和国相关法律及各国际版权公约的保护，请您协助保护。\n
\t您承认网站内容是属于本网站的财产。未经本网站事先书面同意，您承诺不以任何方式或形式予以复制、模仿、传播、出版、公布、展示网站内容，包括但不限于电子的、机械的、复印的、录音录像的方式和形式等；您亦不得将本网站包含的资料等任何内容镜像到任何其他网站或者服务器等任何未经授权对网站内容的使用均属于违法行为，本网站将追究您的法律责任。\n
\t您承诺合法使用本网站提供的服务，不利用本网站从事任何违法违规活动，遵守中国现行法律、法规、规章、规范性文件以及本服务协议的约定。若您违反上述规定，所产生的一切法律责任和后果与本公司和本网站无关，由您自行承担。如您在本网站的某些行为或言论不合法、违反有关协议约定、侵犯本公司的利益等，本公司有权基于独立判断直接删除您在本网站上作出的上述行为或言论，有权中止、终止、限制您使用本网站服务，而无需通知您，亦无需承担任何责任。并且，您还要承担因此而给本公司及本网站造成损失的损失。本公司保留将您的违法违规行为及有关信息资料进行公示、计入用户信用档案、按照法律法规的规定提供的有关政府部门或按照有关协议约定提供给第三方的权利。\n
\t另外，就任何第三方提出的，由于您违反本协议及纳入本协议的条款和规则或您违反任何法律、法规或侵害第三方的权利而产生或引起的每一种类和性质的任何索赔、要求、诉讼、损失和损害（实际的、特别的及有后果的），无论是已知或未知的，包括合理的律师费，您同意就此对本网站和本网站的母公司、 子公司、关联公司、高级职员、董事、代理人和雇员（如适用）进行补偿并使其免受损害。\n\n

五、投资人代表\n
\t本网站用户使用本网站服务时，无条件同意由本网站以每一个项目为单位，在其投资的项目的全体投资人中，指定某一投资人作为该项目投资人代表，行使全体债权人权利，但是该投资人代表行使权利的范围以维护全体投资人利益为前提。本网站保留无条件随时更换投资人代表的权利。\n
\t您注册使用本网站服务时，知晓并了解上述情况，承诺如被选为投资人代表，愿意无条件同意承担上述责任，并在维护全体投资人利益的前提下，作为全体债权人代表行使权利。\n\n

六、服务费用\n
\t您注册使用本网站服务，本公司有权向您收取服务费用，具体服务费用以本网站公告或其他协议为准。您承诺按照本服务协议约定向本网站支付服务费用，并同意本网站有权自其有关账户中直接扣划服务费用。您通过本网站与其他方签订协议的，按照签署的协议约定向其他方支付费用。\n\n

七、不保证\n
\t除非本网站或其合作方在特定投资交易成立后的电子协议书中明示承担责任外，本网站提供的服务中不带有对本网站中的任何用户、任何交易的任何保证，因此本网站及其股东、创建人、高级职员、董事、代理人、关联公司、母公司、子公司和雇员（以下称"本网站方"）不保证由其他用户或机构提供的内容的真实性、充分性、及时性、可靠性、完整性和有效性，并且不承担任何由此引起的法律责任。\n\n

八、涉及第三方网站\n
\t本网站的网站内容可能涉及由第三方所有、控制或者运营的其他网站的内容或链接（以下称"第三方网站"）。本网站不能保证也没有义务保证第三方网站上的信息的真实性和有效性。对于该等内容或链接，您确认按照第三方网站的使用协议确定相关权利义务，而不是按照本协议。第三方网站的内容、产品、广告和其他任何信息均由您自行判断并承担风险，而与本网站无关。\n\n

九、责任限制\n
\t本网站因第三方网站的设备、系统问题或者因为计算机病毒而给您造成的损失，本公司及本网站均不负责赔偿，您可以采取终止本协议并停止使用本网站作为补救措施。 投资需谨慎，您对于本网站披露的信息、选择使用本网站提供的服务，选择参与交易等，应当自行判断真实性和承担风险，由此而产生的法律责任和后果由您自行承担。 与本公司合作的第三方机构向用户提供的服务由第三方机构自行负责，本公司不对此等服务承担任何责任。\n
\t在任何情况下，本公司及本网站不承担您使用本网站服务而产生的任何形式的直接或间接损失，包括但不限于资金损失、利润损失、营业中断损失等。无论如何，本公司对您承担的违约赔偿（如有）总额不超过向用户收取的服务费用总额。\n\n

十、服务的中止或终止\n
\t1. 除非本网站终止本协议或者您申请终止本协议及注销相应用户账户且经本网站同意，否则本协议始终有效。\n
\t在您违反了本协议、相关规则，或在相关法律法规、政府部门的要求下，本网站有权通过电子邮件告知方式终止本协议、关闭您的账户或者限制您使用本网站。但本网站的终止行为不能免除您根据本使用协议或在本网站生成的其他协议项下的还未履行完毕的义务。\n
\t2、发生下列情形之一的，本网站有权随时中止或终止向您提供服务：\n
\t(1)对于网络设备进行必要的保养及施工时；\n
\t(2)出现突发性的网络设备故障时；\n
\t(3)本网站所使用的网络通信设备由于不明原因停止，无法提供服务时；\n
\t(4)由于不可抗力因素致使本网站无法提供线上服务时；\n
\t(5)相关政府机构的要求。\n
\t3、发生下列情形之一的，本网站有权随时中止或终止向您提供服务而无需通知用户：\n
\t(1)用户提供的个人资料不准确，不真实，不合法有效；\n
\t(2)用户使用任何第三方程序进行登录或使用服务；\n
\t(3)用户滥用所享受的权利；\n
\t(4)用户有损害其他用户的行为；\n
\t(5)用户有违背社会风俗和社会道德的行为；\n
\t(6)用户有违反本协议中相关规定的行为。\n
\t4、如因系统维护或升级的需要而需暂停网络服务，本网站将尽可能事先进行通告。\n
\t5、终止用户服务后，您使用本网站服务的权利立即终止。从终止用户服务即刻起，本网站不再对您承担任何责任和义务。\n\n

\t十一、适用法律和管辖\n
因本网站提供服务所产生的争议均适用中华人民共和国法律，如因此而产生争议，任何一方均可交由北京仲裁委员会，按照该会现行有效仲裁规则，予以仲裁解决。\n\n

十二、投诉和咨询\n
若您在使用本网站的过程中有任何的疑问、投诉和咨询，可随时致电客服热线400-910-6868或发送电子邮件到本网站指定的电子邮箱：service@anyitou.com。 感谢您的信任、支持及耐心阅读。\n

</string>
	
	
	<string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">释放刷新</string>
    <string name="xlistview_header_hint_loading">加载中…</string>
    <string name="xlistview_header_last_time">最后更新：</string>
    <string name="xlistview_footer_hint_normal">上拉加载</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
	
</resources>
