<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/white"
    android:orientation="vertical" >

    <cn.com.anyitou.views.ActionBar
        android:id="@+id/actionBar"
        android:layout_width="fill_parent"
        android:layout_height="48dp" >
    </cn.com.anyitou.views.ActionBar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/actionBar"
        android:layout_marginTop="15dp"
        android:orientation="vertical" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/registericon" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:text="@string/registered_kaitong"
            android:textColor="#646464"
            android:textSize="18sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/registered_baozhang"
            android:textColor="#646464"
            android:textSize="18sp" />

        <RelativeLayout
            android:id="@+id/register_now"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="28dp"
            android:layout_marginRight="28dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/registered_delete_select" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:background="@null"
                android:gravity="center"
                android:singleLine="true"
                android:text="立即开通"
                android:textColor="@color/white"
                android:textSize="17sp" />
        </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="10dp"
            android:text="@string/registered_shuoming"
            android:textColor="#646464"
            android:textSize="13sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/un_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_margin="20dp"
        android:background="@drawable/btn_selector"
        android:orientation="horizontal"
        android:padding="3dp" >

        <ImageView
            android:layout_gravity="center_vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/icon_un_register" />

        <TextView
            android:layout_gravity="center_vertical"
            android:id="@+id/un_register_text"
            android:layout_width="wrap_content"
            android:layout_marginLeft="4dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/un_register"
            android:textColor="@color/tab_title_color" />
    </LinearLayout>

</RelativeLayout>